--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@ section {
   background-color: rgb(245, 245, 245);
 }
 
+.container {
+  padding: 50px 0;
+}
+
+.row {
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 12px; 
+}
+
 .click {
   transition: all 300ms ease;
 }
@@ -110,6 +121,43 @@ section {
  right: 40px;
 }
 
+.scroll {
+  position: absolute;
+  bottom: 20px; 
+  left: 50%;
+  transform: translateX(-50%);
+
+
+}
+
+.scroll__icon {
+  width: 20px; 
+  height: 30px;
+  border: 2px solid #242424;
+  border-radius: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.scroll__icon:after {
+  content: "";
+  width: 4px;
+  height: 6px;
+  background-color: #242424;
+  border-radius: 2px;
+  animation: scroll 1000ms infinite alternate-reverse;
+}
+
+@keyframes scroll {
+ 0% {
+  transform: translateY(3px);
+ } 
+ 100% {
+  transform: translateY(-3px);
+ }
+}
+
 /* NAVIGATION */
 
 nav {
@@ -144,4 +192,69 @@ nav {
 
 .fa-adjust {
   font-size: 20px;
+}
+
+/* PROJECTS */
+
+.section__title {
+  text-align: center;
+  font-size: 48px;
+  margin-bottom: 60px; 
+}
+
+.project__img {
+  width: 100%;
+}
+
+.project__wrapper {
+  position: relative;
+  border-radius: 20px;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+  overflow: hidden;
+}
+
+.project__wrapper:hover .project__description {
+  opacity: 1;
+  transform: translateX(-50%);
+}
+
+.project__description {
+  position: absolute;
+  top: 50%;
+  left: 90px;
+  transform: translateY(100%);
+  opacity: 0;
+  transition: opacity 300ms, transform 450ms ease;
+  color: white;
+  max-width: 550px;
+}
+
+.project__wrapper--bg {
+  position: absolute;
+  top: 0;
+  left: 0; 
+  width: 100%;
+  height: 100%;
+  background-color: #1c1d25;
+  opacity: 0.7;
+  transition: all 450ms ease;
+}
+
+.project__description--title {
+  font-size: 40px;
+}
+
+.project__description--sub-title {
+  margin-top: 8px;
+}
+
+.project__description--link {
+  color: white;
+  font-size: 20px;
+  margin-right: 16px;
+}
+
+.project__description--para {
+  margin: 16px 0;
+
 }
